--- a/src/docs/usage/1-css-utilities.stories.mdx
+++ b/src/docs/usage/1-css-utilities.stories.mdx
@@ -11,7 +11,9 @@ Mainsail comes with a few utility classes for working within the Mainsail design
 ## What's available?
 
 -   [Colors](#colors)
+-   [Sizing](#sizing) (Simple sizing utilities - not meant to replace AutoGrid/Flex)
 -   [Spacing](#spacing) (margins/padding with responsive designations available)
+-   [Visibility](#visibility) (showing/hiding with responsive designations available)
 -   [Corner Radius](#corner-radius)
 -   [Shadows & Overlays](#shadows--overlays)
 -   [Typography](#typography)
@@ -216,6 +218,33 @@ Uses the syntax `rounded-<amount>`.
     </div>
 </Canvas>
 
+# Sizing
+
+These sizing utilities are not meant to be a replacement for AutoGrid or Flex components.
+
+> Note: At this time, responsive utilities do not exist for this because AutoGrid/Flex components can control sizing at breakpoints.
+
+|    Class | Amount |
+| -------: | ------ |
+| w-screen | 100vw  |
+|   w-full | 100%   |
+|    w-3/4 | 75%    |
+|    w-1/2 | 50%    |
+|    w-1/4 | 25%    |
+|    w-1/3 | 33.33% |
+|    w-2/3 | 66.66% |
+| h-screen | 100vh  |
+|   h-full | 100%   |
+
+<Canvas className="body-text sm">
+    <div className="space-y-8">
+        <div class="bg-blue-primary w-full p-10 text-white">w-full</div>
+        <div class="bg-blue-light w-3/4 p-10 text-blue-middle">w-3/4</div>
+        <div class="bg-blue-middle w-1/2 p-10 text-white">w-1/2</div>
+        <div class="bg-blue-dark w-1/4 h-full p-10 text-white">w-1/4</div>
+    </div>
+</Canvas>
+
 # Spacing
 
 For common Mainsail spec spacing margins and padding, you can use `p-<size>` and `m-<size>` classes.
@@ -229,7 +258,9 @@ These are controllable with an intuitive explicit sizing scale that comes from s
 | Class specifier | Pixels |
 | --------------: | ------ |
 |               0 | 0px    |
+|               2 | 2px    |
 |               4 | 4px    |
+|               6 | 6px    |
 |               8 | 8px    |
 |              10 | 10px   |
 |              12 | 12px   |
@@ -338,7 +369,7 @@ Responsive designations for spacing can be applied. The syntax looks like `<brea
     </div>
 </Canvas>
 
-### Hiding
+### Visibility
 
 Resize the browser to see these utility classes at work.
 
