makes text more visible on example

--- a/src/docs/usage/1-css-utilities.stories.mdx
+++ b/src/docs/usage/1-css-utilities.stories.mdx
@@ -43,7 +43,9 @@ Uses the syntax `bg-<color>-<variant>`.
 
 <Canvas className="body-text sm">
     <div className="space-y-8">
-        <div class="bg-blue-primary rounded p-8">bg-blue-primary</div>
+        <div class="bg-blue-primary text-blue-light rounded p-8">
+            bg-blue-primary
+        </div>
         <div class="bg-blue-light rounded p-8">bg-blue-light</div>
         <div class="bg-blue-middle rounded p-8 text-blue-light">
             bg-blue-middle
