--- a/src/docs/guides/Animating-mainsail.stories.mdx
+++ b/src/docs/guides/Animating-mainsail.stories.mdx
@@ -6,7 +6,7 @@ import { Transition, Switcher, useSwitcher } from "components/core";
 
 # Animating Mainsail UI
 
-Mainsail provides a couple components to aid in providing easy access to animating components.
+Mainsail provides a couple components to aid in animating transitions for components.
 
 -   [Transition](#transition)
 -   [Switcher](#switcher)
@@ -16,7 +16,7 @@ Mainsail provides a couple components to aid in providing easy access to animati
 -   Uses [React Transition Group](https://reactcommunity.org/react-transition-group/) under the hood for easily customizable, css-based animations
 -   Useful for enter and exit animations
 -   Unmounts a component when animation is done (by default - is configurable)
--   Allows for animation lifecycle callbacks
+-   Allows for animation lifecycle callbacks - call a function when things start or are finished!
 
 ```jsx
 <Transition animation={"fade"} isActive={true} shouldAnimateOnMount>
@@ -45,7 +45,6 @@ This hook exists solely as a convenience to manage all the state needed for the 
 ```jsx
 import { Switcher, useSwitcher } from "mainsail-ui";
 
-// The hook provides all state handling necessary for using Switcher
 const {
     previousView,
     currentView,
@@ -53,10 +52,10 @@ const {
     nextAnim,
     setView,
 } = useSwitcher({
-    // Just providing some defaults initial config
-    currentView: 1,
-    nextAnim: "fade-slide-left",
-    previousAnim: "fade-slide-right",
+    // Just providing some initial config defaults to the hook
+    currentView: 1, // starting view
+    nextAnim: "fade-slide-left", // animation for moving to next item
+    previousAnim: "fade-slide-right", // animation for moving to previous item
 });
 
 // Here's the actual switcher (taken from the Switcher Basic story)
@@ -100,7 +99,7 @@ const {
 </div>;
 ```
 
-After the setup above, `setView()` is the only method needed to change views.
+After the setup above, `setView()` method returned from the `useSwitcher()` hook, is the only method needed to change views (with transitions!).
 
 ```jsx
 // Will transition the view to the second child of Switcher
