--- a/docs/docs/css/utility-classes.mdx
+++ b/docs/docs/css/utility-classes.mdx
@@ -1,16 +1,11 @@
 ---
 sidebar_position: 1
-title: Utility Classes
+title: Intro
 ---
-
-import { AutoGrid } from "mainsail-ui";
-import TOCInline from "@theme/TOCInline";
 
 # CSS Utilities
 
 Mainsail comes with a few utility classes for working within the Mainsail design specs.
-
-<TOCInline toc={toc} />
 
 ## Why Utility Classes?
 
@@ -24,559 +19,3 @@ Utility classes are a fairly common styling pattern that offers [many benefits o
 
 The utilities listed on this page are modeled after the very popular [Tailwind CSS](https://2020.stateofcss.com/en-US/technologies/css-frameworks/).
 There are a number of differences, however. For example, not everything has responsive class designations baked-in. Mainsail only includes a small subset of the abilities of Tailwind to save on bundle size.
-
-## Colors
-
-Mainsail color classes are available.
-
-### Background Colors
-
-Applies Mainsail color to background `background-color:` css property.
-
-Uses the syntax `bg-<color>-<variant>`.
-
-<AutoGrid cols={4} gap={20} className="body-text sm">
-    <div className="space-y-8">
-        <div className="bg-blue-primary text-blue-light rounded p-8">
-            bg-blue-primary
-        </div>
-        <div className="bg-blue-light rounded p-8">bg-blue-light</div>
-        <div className="bg-blue-middle rounded p-8 text-blue-light">
-            bg-blue-middle
-        </div>
-        <div className="bg-blue-dark rounded p-8 text-blue-light">
-            bg-blue-dark
-        </div>
-    </div>
-    <div className="space-y-8">
-        <div className="bg-green-light rounded p-8">bg-green-light</div>
-        <div className="bg-green-middle rounded p-8">bg-green-middle</div>
-        <div className="bg-green-dark rounded p-8 text-green-light">
-            bg-green-dark
-        </div>
-    </div>
-    <div className="space-y-8">
-        <div className="bg-violet-light rounded p-8">bg-violet-light</div>
-        <div className="bg-violet-middle rounded p-8 text-violet-light">
-            bg-violet-middle
-        </div>
-        <div className="bg-violet-dark rounded p-8 text-violet-light">
-            bg-violet-dark
-        </div>
-    </div>
-    <div className="space-y-8">
-        <div className="bg-orange-light rounded p-8">bg-orange-light</div>
-        <div className="bg-orange-middle rounded p-8">bg-orange-middle</div>
-        <div className="bg-orange-dark rounded p-8">bg-orange-dark</div>
-    </div>
-    <div className="space-y-8">
-        <div className="bg-red-light rounded p-8">bg-red-light</div>
-        <div className="bg-red-middle rounded p-8">bg-red-middle</div>
-        <div className="bg-red-dark rounded p-8 text-red-light">
-            bg-red-dark
-        </div>
-    </div>
-    <div className="space-y-8">
-        <div className="bg-pink-light rounded p-8">bg-pink-light</div>
-        <div className="bg-pink-middle rounded p-8">bg-pink-middle</div>
-        <div className="bg-pink-dark rounded p-8 text-pink-light">
-            bg-pink-dark
-        </div>
-    </div>
-    <div className="space-y-8">
-        <div className="bg-neutral-1 rounded p-8 text-neutral-6">
-            bg-neutral-1
-        </div>
-        <div className="bg-neutral-2 rounded p-8 text-neutral-6">
-            bg-neutral-2
-        </div>
-        <div className="bg-neutral-3 rounded p-8">bg-neutral-3</div>
-        <div className="bg-neutral-4 rounded p-8">bg-neutral-4</div>
-        <div className="bg-neutral-5 rounded p-8">bg-neutral-5</div>
-        <div className="bg-neutral-6 rounded p-8">bg-neutral-6</div>
-        <div className="bg-white rounded border-blue-light p-8">bg-white</div>
-    </div>
-</AutoGrid>
-
-### Text Colors
-
-Apply Mainsail color to text `color:` css property.
-
-Uses the syntax `text-<color>-<variant>`.
-
-<AutoGrid cols={4} gap={20} className="body-text sm">
-    <div>
-        <div className="text-blue-primary p-8">text-blue-primary</div>
-        <div className="text-blue-light p-8">text-blue-light</div>
-        <div className="text-blue-middle p-8">text-blue-middle</div>
-        <div className="text-blue-dark p-8">text-blue-dark</div>
-    </div>
-    <div>
-        <div className="text-green-light p-8">text-green-light</div>
-        <div className="text-green-middle p-8">text-green-middle</div>
-        <div className="text-green-dark p-8">text-green-dark</div>
-    </div>
-    <div>
-        <div className="text-violet-light p-8">text-violet-light</div>
-        <div className="text-violet-middle p-8">text-violet-middle</div>
-        <div className="text-violet-dark p-8">text-violet-dark</div>
-    </div>
-    <div>
-        <div className="text-orange-light p-8">text-orange-light</div>
-        <div className="text-orange-middle p-8">text-orange-middle</div>
-        <div className="text-orange-dark p-8">text-orange-dark</div>
-    </div>
-    <div>
-        <div className="text-red-light p-8">text-red-light</div>
-        <div className="text-red-middle p-8">text-red-middle</div>
-        <div className="text-red-dark p-8">text-red-dark</div>
-    </div>
-    <div>
-        <div className="text-pink-light rounded p-8">text-pink-light</div>
-        <div className="text-pink-middle rounded p-8">text-pink-middle</div>
-        <div className="text-pink-dark rounded p-8 text-pink-light">
-            text-pink-dark
-        </div>
-    </div>
-    <div>
-        <div className="text-neutral-1 p-8">text-neutral-1</div>
-        <div className="text-neutral-2 p-8">text-neutral-2</div>
-        <div className="text-neutral-3 p-8">text-neutral-3</div>
-        <div className="text-neutral-4 p-8">text-neutral-4</div>
-        <div className="text-neutral-5 p-8">text-neutral-5</div>
-        <div className="text-neutral-6 bg-neutral-4 p-8">text-neutral-6</div>
-        <div className="text-white bg-neutral-3 p-8">text-white</div>
-    </div>
-</AutoGrid>
-
-### Border Colors
-
-Apply Mainsail border and color to text `color:` css property.
-
-Uses the syntax `text-<color>-<variant>`.
-
-<AutoGrid cols={4} gap={20} className="body-text sm">
-    <div className="space-y-4">
-        <div className="border-blue-primary p-8">border-blue-primary</div>
-        <div className="border-blue-light p-8">border-blue-light</div>
-        <div className="border-blue-middle p-8">border-blue-middle</div>
-        <div className="border-blue-dark p-8">border-blue-dark</div>
-    </div>
-    <div className="space-y-4">
-        <div className="border-green-light p-8">border-green-light</div>
-        <div className="border-green-middle p-8">border-green-middle</div>
-        <div className="border-green-dark p-8">border-green-dark</div>
-    </div>
-    <div className="space-y-4">
-        <div className="border-violet-light p-8">border-violet-light</div>
-        <div className="border-violet-middle p-8">border-violet-middle</div>
-        <div className="border-violet-dark p-8">border-violet-dark</div>
-    </div>
-    <div className="space-y-4">
-        <div className="border-orange-light p-8">border-orange-light</div>
-        <div className="border-orange-middle p-8">border-orange-middle</div>
-        <div className="border-orange-dark p-8">border-orange-dark</div>
-    </div>
-    <div className="space-y-4">
-        <div className="border-red-light p-8">border-red-light</div>
-        <div className="border-red-middle p-8">border-red-middle</div>
-        <div className="border-red-dark p-8">border-red-dark</div>
-    </div>
-    <div className="space-y-4">
-        <div className="border-pink-light p-8">border-pink-light</div>
-        <div className="border-pink-middle p-8">border-pink-middle</div>
-        <div className="border-pink-dark p-8 border-pink-light">
-            border-pink-dark
-        </div>
-    </div>
-    <AutoGrid cols={2} gap={8}>
-        <div className="border-neutral-1 p-8">border-neutral-1</div>
-        <div className="border-neutral-2 p-8">border-neutral-2</div>
-        <div className="border-neutral-3 p-8">border-neutral-3</div>
-        <div className="border-neutral-4 p-8">border-neutral-4</div>
-        <div className="border-neutral-5 p-8">border-neutral-5</div>
-        <div className="border-neutral-6 p-8">border-neutral-6</div>
-    </AutoGrid>
-</AutoGrid>
-
----
-
-## Corner Radius
-
-Apply Mainsail corner radius via the `border-radius:` css property.
-
-Uses the syntax `rounded-<amount>`.
-
-|             Amount | Pixels |
-| -----------------: | ------ |
-| `rounded` (no amt) | 4px    |
-|                  4 | 4px    |
-|                  8 | 8px    |
-|                 10 | 10px   |
-|                 20 | 20px   |
-
-<div className="body-text sm">
-    <div className="space-y-8">
-        <div className="bg-blue-primary rounded-4 p-48 text-white">
-            rounded-4
-        </div>
-        <div className="bg-blue-primary rounded-8 p-48 text-white">
-            rounded-8
-        </div>
-        <div className="bg-blue-primary rounded-10 p-48 text-white">
-            rounded-10
-        </div>
-        <div className="bg-blue-primary rounded-20 p-10 pl-48 text-white">
-            rounded-20
-        </div>
-    </div>
-</div>
-
----
-
-## Sizing
-
-These sizing utilities are not meant to be a replacement for AutoGrid or Flex components.
-
-> Note: At this time, responsive utilities do not exist for this because AutoGrid/Flex components can control sizing at breakpoints.
-
-|    Class | Amount |
-| -------: | ------ |
-| w-screen | 100vw  |
-|   w-full | 100%   |
-|    w-3/4 | 75%    |
-|    w-1/2 | 50%    |
-|    w-1/4 | 25%    |
-|    w-1/3 | 33.33% |
-|    w-2/3 | 66.66% |
-| h-screen | 100vh  |
-|   h-full | 100%   |
-
-<div className="body-text sm">
-    <div className="space-y-8">
-        <div className="bg-blue-primary w-full p-10 text-white">w-full</div>
-        <div className="bg-blue-light w-3/4 p-10 text-blue-middle">w-3/4</div>
-        <div className="bg-blue-middle w-1/2 p-10 text-white">w-1/2</div>
-        <div className="bg-blue-dark w-1/4 h-full p-10 text-white">w-1/4</div>
-    </div>
-</div>
-
----
-
-## Spacing
-
-For common Mainsail spec spacing margins and padding, you can use `p-<size>` and `m-<size>` classes.
-
-These are controllable with an intuitive explicit sizing scale that comes from sizes used directly from our Figma specs.
-
-> 🚨 Note: These spacing utility classes utilize `!important` tags to ensure they can be used as overrides of existing styles.
-
-**Available Sizes**
-
-| Class specifier | Pixels |
-| --------------: | ------ |
-|               0 | 0px    |
-|               2 | 2px    |
-|               4 | 4px    |
-|               6 | 6px    |
-|               8 | 8px    |
-|              10 | 10px   |
-|              12 | 12px   |
-|              15 | 15px   |
-|              16 | 16px   |
-|              20 | 20px   |
-|              30 | 30px   |
-|              48 | 48px   |
-
-Explicit directional margin/padding can be applied by adding a `t`/`b`/`l`/`r` designation to the class.
-
-E.g. `mr-8` will apply `margin-right: 8px` and `ml-8` will apply `margin-left: 8px`.
-
-If desired, you can supply `x` or `y` to apply to both sides.
-
-**Examples**
-
-```jsx
-// Using margin utility with 8px of top margin
-<Button className="mt-8" text="Cancel" />
-
-// Using margin utility with 8px of top and 20px of left/right margin
-<Button className="mt-8 mx-20" text="Confirm"/>
-```
-
-<div>
-    <div className="body-text">
-        <h3>Margin Top</h3>
-        <div className="bg-red-light">
-            <div className="bg-neutral-1 p-4"></div>
-            <div className="bg-blue-light p-8 mt-4">mt-4</div>
-            <div className="bg-blue-light p-8 mt-8">mt-8</div>
-            <div className="bg-blue-light p-8 mt-10">mt-10</div>
-            <div className="bg-blue-light p-8 mt-12">mt-12</div>
-            <div className="bg-blue-light p-8 mt-15">mt-15</div>
-            <div className="bg-blue-light p-8 mt-16">mt-16</div>
-            <div className="bg-blue-light p-8 mt-20">mt-20</div>
-            <div className="bg-blue-light p-8 mt-30">mt-30</div>
-            <div className="bg-blue-light p-8 mt-48">mt-48</div>
-        </div>
-    </div>
-</div>
-
-### Space Between
-
-If you need to quickly apply some in-between spacing in a simple way use, `space-y-<amount>` and `space-x-<amount>` (where amount is an integer in the table above) on a parent item. This adds margin to all but the first item of children.
-
-If you have complex scenarios, reach for [AutoGrid](./?path=/docs/layout-grid-autogrid--simple-grid).
-
-<div>
-    <div>
-        <span className="body-text">
-            This example uses <code>space-y-12</code> for automatic vertical
-            spacing.
-        </span>
-        <div className="space-y-12 bg-red-light">
-            <div className="bg-blue-light p-8"></div>
-            <div className="bg-blue-light p-8"></div>
-            <div className="bg-blue-light p-8"></div>
-        </div>
-    </div>
-</div>
-
-<div>
-    <div>
-        <span className="body-text">
-            This example uses <code>space-x-12</code> for automatic horizontal
-            spacing.
-        </span>
-        <div className="space-x-12 bg-red-light flex">
-            <div className="bg-blue-light flex-grow p-8"></div>
-            <div className="bg-blue-light flex-grow p-8"></div>
-            <div className="bg-blue-light flex-grow p-8"></div>
-        </div>
-    </div>
-</div>
-
-> Warning: No responsive features exist for the `space-` utility at this time.
-
-### Responsive Spacing & Hiding
-
-Responsive designations for spacing can be applied. The syntax looks like `<breakpoint>:<class>`
-
-```jsx
-<div className="bg-blue-light p-8 sm:mt-8 md:mt-20 lg:mt-30">mt-48</div>
-```
-
-<div>
-    <div className="body-text">
-        <span className="m-0">
-            Margin with 8px at small, 20px at medium and 30 at large (resize
-            browser window to see)
-        </span>
-        <div className="bg-neutral-1 p-4"></div>
-        <div className="bg-blue-light p-20 sm:mt-8 md:mt-20 lg:mt-30">
-            <span className="md:hidden lg:hidden">
-                Small and under <code>mt-8</code>
-            </span>
-            <span className="sm:hidden lg:hidden">
-                Medium breakpoints only <code>mt-20</code>
-            </span>
-            <span className="md:hidden sm:hidden">
-                Large and up <code>mt-30</code>
-            </span>
-        </div>
-    </div>
-</div>
-
-## Visibility
-
-Resize the browser to see these utility classes at work.
-
-<div className="body-text mb-20">
-    <h3>Visible at Specific Breakpoints</h3>
-    <div className="flex col mb-20">
-        <div className="p-48 bg-blue-primary text-white sm:visible">
-            sm:visible
-        </div>
-        <div className="p-48 bg-red-middle text-white md:visible">
-            md:visible
-        </div>
-        <div className="p-48 bg-green-middle text-white lg:visible">
-            lg:visible
-        </div>
-    </div>
-    <h3>Hidden at Specific Breakpoints</h3>
-    <div className="flex col space-y-8">
-        <div className="p-48 bg-blue-primary text-white sm:hidden">
-            sm:hidden (shown at everything but sm)
-        </div>
-        <div className="p-48 bg-red-middle text-white md:hidden">
-            md:hidden (shown at everything but md)
-        </div>
-        <div className="p-48 bg-green-middle text-white lg:hidden">
-            lg:hidden (shown at everything but lg)
-        </div>
-    </div>
-</div>
-These work according to the following chart:
-
-| Class specifier | Pixels              |
-| --------------: | ------------------- |
-|      sm:visible | Visible only at sm- |
-|      md:visible | Visible only at md  |
-|      lg:visible | Visible only at lg+ |
-|       sm:hidden | Hides at sm-        |
-|       md:hidden | Hides at md         |
-|       lg:hidden | Hides at lg+        |
-
-While a few hiding (<code>display: none</code>) helpers exist (shown above), you may be better suited to conditionally unmount components at breakpoints using a `useBreakpoint` hook .
-
-> Note: `import { useBreakpoint } from "mainsail-ui"` — This hook can be used to provide responsive reactivity in JS components, but should be used at a higher level if possible because it responds to window resizing and should be used sparingly.
-
-## Shadows & Overlays
-
-Box shadows and overlay can be applied easily with the shadow utility classes.
-
-```jsx
-<div className="box-shadow-near">Box Shadow Near</div>
-<div className="box-shadow-far">Box Shadow Far</div>
-<div className="box-shadow-sticky">Box Shadow Sticky Bar</div>
-```
-
-<div>
-    <div className="body-text">
-        <div className="px-15 py-8 mb-20 bg-neutral-6 box-shadow-near">
-            Box Shadow Near
-        </div>
-        <div className="px-15 py-8 mb-20 box-shadow-far">Box Shadow Far</div>
-        <div className="px-15 py-8 mb-20 box-shadow-sticky">
-            Box Shadow Sticky Bar
-        </div>
-    </div>
-</div>
-
----
-
-### Overlays
-
-Using existing position utility classes you can craft an overlay without much css required.
-
-This example contains an `content-overlay` that spans the full ranges of its parent.
-
-<div className="px-15 py-8 mb-20 body-text relative">
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti fugiat
-        fugit, harum neque eum dolorem maiores sint mollitia optio dicta!
-    </p>
-    <div className="content-overlay absolute top-0 right-0 bottom-0 left-0"></div>
-</div>
-
-This example contains a `content-blur` that blurs all the children.
-
-<div className="px-15 py-8 body-text content-blur">
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti fugiat
-        fugit, harum neque eum dolorem maiores sint mollitia optio dicta!
-    </p>
-</div>
-
----
-
-## Typography
-
-Basic Mainsail typography classes are available.
-
--   Headings
--   Body
--   Labeling text
--   Button text
-
-### Headings
-
-```html
-<h1>Hello World Hero</h1>
-<h2>Hello World H2</h2>
-<h3>Hello World H3</h3>
-<h4>Hello World H4</h4>
-
-// You may also use .h1, .h2, .h3, .h4 classes when needed
-```
-
-<div>
-    <div>
-        <h1>Hello World Hero</h1>
-        <h2>Hello World H2</h2>
-        <h3>Hello World H3</h3>
-        <h4>Hello World H4</h4>
-    </div>
-</div>
-
-### Body text
-
-**4 sizes** of body text exist: `lg`, `md` (default), `sm` and `xs`.
-
-```jsx
-<p className="body-text lg">
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem, accusamus.
-</p>
-
-<p className="body-text md">
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem, accusamus.
-</p>
-
-<p className="body-text sm">
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem, accusamus.
-</p>
-
-<p className="body-text xs">
-    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem, accusamus.
-</p>
-```
-
-<div>
-    <div>
-        <p className="body-text lg mb-10">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit
-        </p>
-        <p className="body-text md mb-10">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit
-        </p>
-        <p className="body-text sm mb-10">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit
-        </p>
-        <p className="body-text xs mb-10">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit
-        </p>
-    </div>
-</div>
-
-### Label text
-
-**1 size** of label text exists:`sm`.
-
-> 💡 This is a text style for labeling UI content and not specifically for `<label/>` elements
-
-```jsx
-<p className="label-text sm text-neutral-3">Labeling Text</p>
-```
-
-<div>
-    <div>
-        <p className="label-text sm text-neutral-3">Labeling Text</p>
-    </div>
-</div>
-
-### Button text
-
-**2 sizes** of button text exist: `md` & `sm` (md can be omitted).
-
-```jsx
-<p className="button-text text-neutral-2">Button Text</p>
-<p className="button-text sm text-neutral-2">Button Text</p>
-```
-
-<div>
-    <div>
-        <p className="button-text text-neutral-2">Regular Button Text</p>
-        <p className="button-text sm text-neutral-2">Small Button Text</p>
-    </div>
-</div>
